k8s/base/tools-selain/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toimi-tools-selain
  namespace: apps
spec:
  selector:
    app: toimi-tools-selain
  ports:
    - port: 80
      targetPort: 8080
