k8s/base/tools-selain/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toimi-tools-selain
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: ${TOIMI_HOST}
      http:
        paths:
          - path: /tabs
            pathType: Prefix
            backend:
              service:
                name: toimi-tools-selain
                port:
                  number: 80
